Fixes broken css

--- a/_sass/partials/_navigation.scss
+++ b/_sass/partials/_navigation.scss
@@ -39,7 +39,7 @@ $nav-scroll-color-hover: rgba(0, 0, 0, .8);
     .logo {
         display: inline-block;
         float: left;
-        width: 225px;
+        width: 185px;
         height: 60px;
         margin-right: 20px;
         transform: scale(.7);
